# comprl

./: .gitignore  README.md
.github/workflows/: docs.yml  lint.yml  lint_comprl_web_reflex.yml  test.yml
comprl/: CHANGELOG.md  README.md  pyproject.toml
comprl-hockey-agent/: run_client.py
comprl-hockey-game/: .gitignore  Dockerfile  Dockerfile.dockerignore  Evaluation.ipynb  Makefile  README.md  analyse_match_qualities.py  bot-agent.Dockerfile  compose.yaml  comprl-hockey.def  comprl.toml  config-docker.toml  config.toml  container.def  hockey_game.py  prepare_database.sh  render_game.py  requirements.txt  select_top_player_games.py
comprl-web-reflex/: .gitignore  Caddy.Dockerfile  Dockerfile  Dockerfile.dockerignore  Makefile  README.md  compose.prod.yaml  compose.yaml  comprl-web-reflex.def  pyproject.toml  requirements.txt  rxconfig.py
comprl-web-reflex/comprl_web/: components.py  comprl_web.py  protected_state.py
comprl-web-reflex/comprl_web/pages/: games.py  leaderboard.py  settings.py  user_dashboard.py
comprl-web-reflex/comprl_web/reflex_local_auth/: auth_session.py  local_auth.py  login.py  registration.py
comprl/examples/rockpaperscissors/: config.toml
comprl/examples/simple/: config.toml
comprl/src/comprl/client/: agent.py  interfaces.py
comprl/src/comprl/scripts/: create_database.py  dummy_user.py  list_games.py  manage_users.py  monitor.py  reset.py  score_decay.py
comprl/src/comprl/server/: __main__.py  config.py  interfaces.py  managers.py  networking.py
comprl/src/comprl/server/data/: __init__.py  models.py  sql_backend.py
comprl/tests/: game_database_test.py  reset_database_test.py  user_database_test.py
docs/: External‐Librarys.md  External‐Librarys.rst  Getting-Started.md  Getting-Started.rst  Home.md  Project-Concepts.md  Project-Concepts.rst  Teamprojekt.md  _Sidebar.md  admin_tools.rst  conf.py  configuration.rst  how_to_docker.rst  how_to_implement_client.rst  implementing_a_game.rst  index.rst  matchmaking.rst  requirements.txt  score_decay.rst  web_interface.rst
