#[build-system]
#requires = ["uv_build>=0.9.8,<0.10.0"]
#build-backend = "uv_build"

[project]
name = "comprl_web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "comprl",
    "reflex",
    "passlib",
    "bcrypt",
]

[dependency-groups]
lsp = [
    "pylsp-rope>=0.1.17",
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server>=1.12.2",
]

[tool.uv.sources]
comprl = { path = "../comprl" }

[tool.ruff]
lint.select = [
    "E",
    "F",
    "B",  # bugbear
    #"D100", "D101", "D102", "D103",  # Complain about missing docstrings
]

[[tool.mypy.overrides]]
# here you can list third-party packages for which no type hints are provided (to avoid
# complaints from mypy)
module = [
    "reflex",
    "comprl.*",  # TODO: find out why it doesn't find the type hints of comprl
]
ignore_missing_imports = true
