[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "comprl"
version = "0.2.3-dev"
description = "Competition Server for Reinforcement Agents -- Teamprojekt WS 23/24"
authors = [
    {name = "Author Name", email = "optional@example.com"},
]

requires-python = ">=3.10"
dependencies = [
    "twisted==24.11.0",
    "numpy",
    "tomli; python_version<'3.11'",
    "openskill==6.0.2",
    "sqlalchemy",
    "bcrypt",
    "tabulate",
    "variconf<2",  # stick with version 1 (currently latest) to avoid breaking changes
    "typer",
]

[project.scripts]
comprl-games = "comprl.scripts.list_games:main"
comprl-monitor = "comprl.scripts.monitor:main"
comprl-score-decay = "comprl.scripts.score_decay:main"
comprl-server = "comprl.server.__main__:main"
comprl-users = "comprl.scripts.manage_users:app"

[project.optional-dependencies]
# Here you can specify optional dependencies (e.g. for tools that are only needed during
# development).  To install them use `pip install ".[dev]"` (the quotes are needed!).

monitor = ["textual"]


[dependency-groups]
dev = [
    "mypy", 
    "pytest",
    "ruff",
    "types-tabulate",
]
lsp = [
    "pylsp-rope>=0.1.17",
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server>=1.12.2",
]

[tool.setuptools.package-data]
comprl = ["py.typed"]


[tool.ruff]
lint.select = [
    "E",
    "F",
    "B",  # bugbear
    "D100", "D101", "D102", "D103",  # Complain about missing docstrings
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]  # don't enforce docstrings in test files
"examples/*" = ["D"]  # don't enforce docstrings in examples


[tool.mypy]
exclude = ["build", "examples", "presentation"]

[[tool.mypy.overrides]]
# here you can list third-party packages for which no type hints are provided (to avoid
# complaints from mypy)
module = [
    "hockey.*",
    "omegaconf",
    "pytest",
    "textual.*",
]
ignore_missing_imports = true
